# py-allotax

./: .gitignore  README.md  allo_diagram.drawio  examples.ipynb  package-lock.json  package.json  pyproject.toml
.benchmarks/: summary_history.json
conda-recipe/: README.md  build.sh  meta.yaml  post-link.sh
example_charts/: test.html
scripts/: build.sh  save_benchmark_summary.py
src/py_allotax/: aesthetics.js  boys-1968.json  boys-2018.json  generate_svg.py  generate_svg_minimum.js  index.html  package-lock.json  package.json  utils.py
src/py_allotax/components/: balance_plot.js  diamond_plot.js  legend_plot.js  wordshift_plot.js
tests/: test_benchmark.py  test_generation.py
